--- a/QuanLyInternet/App.config
+++ b/QuanLyInternet/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="QuanLyInternet.Properties.Settings.QuanLyDangKyInternetConnectionString"
+            connectionString="Data Source=THINH;Initial Catalog=QuanLyDangKyInternet;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
