--- a/QuanLyInternet/QuanLyInternet.csproj
+++ b/QuanLyInternet/QuanLyInternet.csproj
@@ -50,6 +50,10 @@
     <Compile Include="Ambiance Theme.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="BUS\ApDungCTKM_BUS.cs" />
+    <Compile Include="BUS\CTKM_BUS.cs" />
+    <Compile Include="BUS\DoiTuong_BUS.cs" />
+    <Compile Include="BUS\GoiCuoc_BUS.cs" />
     <Compile Include="BUS\HoaDon_BUS.cs" />
     <Compile Include="BUS\KhachHang_BUS.cs" />
     <Compile Include="BUS\SQLDataContext.cs" />
