--- a/QuanLyInternet/QuanLyInternet.csproj
+++ b/QuanLyInternet/QuanLyInternet.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,6 +55,13 @@
     </Compile>
     <Compile Include="ChartControl.designer.cs">
       <DependentUpon>ChartControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DAO\quanlydangkyinternet.designer.cs" />
+    <Compile Include="DAO\quanlydangkyinternet1.designer.cs" />
+    <Compile Include="DAO\quanlydangkyinternet2.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>quanlydangkyinternet.dbml</DependentUpon>
     </Compile>
     <Compile Include="FormDangKiMoi.cs">
       <SubType>Form</SubType>
@@ -117,6 +125,26 @@
     <Compile Include="FormSuaThongTin.Designer.cs">
       <DependentUpon>FormSuaThongTin.cs</DependentUpon>
     </Compile>
+    <Compile Include="BUS\ApDungCTKM_BUS.cs" />
+    <Compile Include="BUS\CTKM_BUS.cs" />
+    <Compile Include="BUS\DoiTuong_BUS.cs" />
+    <Compile Include="BUS\GoiCuoc_BUS.cs" />
+    <Compile Include="BUS\HoaDon_BUS.cs" />
+    <Compile Include="BUS\KhachHang_BUS.cs" />
+    <Compile Include="BUS\SQLDataContext.cs" />
+    <Compile Include="BUS\TaiKhoan_BUS.cs" />
+    <Compile Include="BUS\ThongTinSuDungInternet_BUS.cs" />
+    <Compile Include="BUS\TTLuuThong_BUS.cs" />
+    <Compile Include="BUS\TTThanhToan_BUS.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="Settings.cs" />
+    <None Include="DAO\quanlydangkyinternet.dbml.layout">
+      <DependentUpon>quanlydangkyinternet.dbml</DependentUpon>
+    </None>
     <EmbeddedResource Include="FormDangKiMoi.resx">
       <DependentUpon>FormDangKiMoi.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,14 +185,17 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DAO\quanlydangkyinternet.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>quanlydangkyinternet2.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
