--- a/QuanLyInternet/App.config
+++ b/QuanLyInternet/App.config
@@ -9,6 +9,9 @@
         <add name="QuanLyInternet.Properties.Settings.QuanLyDangKyInternetConnectionString1"
             connectionString="Data Source=LOCTHO\LOCTHO;Initial Catalog=QuanLyDangKyInternet;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="QuanLyInternet.Properties.Settings.QuanLyDangKyInternetConnectionString2"
+            connectionString="Data Source=SKY;Initial Catalog=QuanLyDangKyInternet;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
