--- a/QuanLyInternet/QuanLyInternet.csproj
+++ b/QuanLyInternet/QuanLyInternet.csproj
@@ -59,11 +59,12 @@
     <Compile Include="ChartControl.designer.cs">
       <DependentUpon>ChartControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="DAO\quanlydangkyinternet2.designer.cs">
+    <Compile Include="DAO\quanlydangkyinternet.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>quanlydangkyinternet.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="FormCTKhuyenMai.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,6 +198,11 @@
     <EmbeddedResource Include="FormSuaThongTin.resx">
       <DependentUpon>FormSuaThongTin.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DAO\quanlydangkyinternet.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>quanlydangkyinternet.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -204,11 +210,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="DAO\quanlydangkyinternet.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>quanlydangkyinternet2.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
